--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ main.tf
 crash.log
 crash.*.log
 
+main.tf
+
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
